<resources>
    <string name="app_name">Location Collector</string>
    <string name="splash_activity_title_text">Archaeological Survey\nLocation Collector</string>
    <string name="title_activity_main">Finds List</string>
    <string name="title_activity_paths">Paths List</string>
    <string name="title_activity_data_entry">New Record Form</string>
    <string name="title_activity_path_entry">New Path Form</string>
    <string name="get_the_gps_location">Get the GNSS location</string>
    <string name="data_entry_show_map_button_description">Show GNSS location on map</string>
    <string name="latitude">Lat: %f</string>
    <string name="longitude">Lng: %f</string>
    <string name="altitude">Alt: %f</string>
    <string name="status">Status: %s</string>
    <string name="grid">Grid: %s</string>
    <string name="easting">Easting: %d</string>
    <string name="northing">Northing: %d</string>
    <string name="timestamp">Time: %f</string>
    <string name="GPSConnection">GPS: %s</string>
    <string name="reachConnection">Reach: %s</string>
    <string name="location_permission_denied_prompt">This app needs GNSS to get the location. Please allow access.</string>
    <string name="location_not_found">Sorry, but we were unable to determing your location. Please try again.</string>
    <string name="location_permission_granted_prompt">GNSS permission granted. Please try fetching location again.</string>
    <string name="gps_enable_alert_box">Your GNSS seems to be disabled. Do you want to enable it?</string>
    <string name="enable_gps_alert_positive_button">Enable</string>
    <string name="enable_gps_alert_negative_button">Cancel</string>
    <string name="retrieving_location">Retrieving location…</string>
    <string name="location_map_pin_label">Selected Location</string>
    <string name="location_not_set">No GNSS location set</string>
    <string name="gallery_button">GALLERY</string>
    <string name="camera_button">CAMERA</string>
    <string name="submit_button">SUBMIT FIND</string>
    <string name="delete_button">DELETE FIND</string>
    <string name="confirm_changes">CONFIRM CHANGES</string>
    <string name="start_path_button">START PATH</string>
    <string name="stop_path_button">STOP PATH</string>
    <string name="reset_stop_path_button">RESET END POINT</string>
    <string name="delete_path_button">DELETE PATH</string>
    <string name="save_failed_exception">Failed to save the file</string>
    <string name="save_failed_message">Unexpected error while fetching image. Please try again</string>
    <string name="select_image_prompt" type="id">Select Picture</string>
    <string name="external_storage_permission_granted_prompt">Permission granted. Please try capturing image again.</string>
    <string name="external_storage_permission_denied_prompt">This app needs external storage access for capturing images with camera. Please allow access.</string>
    <string name="camera_app_not_found">Could not find any apps that can take a picture</string>
    <string name="comments_text_input_hint">Additional Comments</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="sync_button">SYNC</string>
    <string name="title_activity_sync">Sync</string>
    <string name="blank_assignment">--</string>
    <string-array name="materials_array">
        <item>Bone</item>
        <item>Lithic</item>
        <item>Ceramic</item>
        <item>Architecture</item>
        <item>Metal</item>
        <item>Other</item>
    </string-array>
    <string-array name="people_array">
        <item>Andrew</item>
        <item>Chris</item>
        <item>Colin</item>
        <item>Malkia</item>
        <item>Peter</item>
    </string-array>
    <string name="no_connection">No Connection</string>
    <string name="no_data">No Data</string>
    <string name="timeout">Timeout</string>
    <string name="connected">Connected</string>
    <string name="default_team_member">Other</string>
    <string name="default_material_general">Other</string>
    <string name = "path_by_frmt">Path by %s</string>
    <string name = "start_point">Start Point</string>
    <string name = "end_point">End Point</string>
    <string name = "whose_path">Whose path is this?</string>
    <string name = "grid_2">Grid</string>
    <string name = "northing_2">Northing</string>
    <string name = "easting_2">Easting</string>
    <string name = "sample">Sample</string>
    <string name = "fixed">Fixed</string>
    <string name = "updating">Updating</string>
    <string name = "select_material">Please select a material</string>
    <string name = "reach_host">Reach Host:</string>
    <string name = "reach_port">Reach Port:</string>
    <string name = "update_interval">Update Interval: (seconds) </string>
    <string name = "string_frmt">%s</string>
</resources>
