<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.upenn.sas.archaeologyapp.PathEntryActivity"
    tools:showIn="@layout/activity_path_entry">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorTintedBackground">

            <TextView
                android:id="@+id/GPSConnection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/GPSConnection"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reachConnection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/reachConnection"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/colorTintedBackground">

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="Start Point"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1" />

                <TextView
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="End Point"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:maxLines="1" />

            </LinearLayout>


            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginGrid"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/grid"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endGrid"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/grid"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginEasting"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/easting"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endEasting"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/easting"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginNorthing"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/northing"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endNorthing"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/northing"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginLatitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/latitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endLatitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/latitude"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginLongitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/longitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endLongitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/longitude"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginAltitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/altitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endAltitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/altitude"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/timestamp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/timestamp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorTintedBackground">

            <TextView
                android:ellipsize="end"
                android:textStyle="bold"
                android:text="Whose path is this?"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1" />

            <Spinner
                android:id="@+id/path_entry_team_members_drop_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/path_entry_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/dataEntryButtonBackgroundColor"
            android:onClick="submitButtonPressed"
            android:text="@string/start_path_button"
            android:textColor="@color/dataEntryButtonTextColor" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
